# apuntador-backend

./: .dockerignore  .env.example  .env.otel.example  .gitignore  CLIENT_INTEGRATION.md  Dockerfile  Dockerfile.lambda  Makefile  QUICKSTART.md  README.md  TESTING_GUIDE.md  copy-adot-image.sh  docker-compose.otel.yml  pyproject.toml  sonar-project.properties  start.sh
.devcontainer/: Dockerfile  QUICKSTART.md  README.md  devcontainer.json  verify-setup.sh
.github/: copilot-instructions.md
.github/workflows/: auto-deploy.yml  deploy-release.yml  inspect-test-release.yml  sonarcloud.yml
config/: otel-collector-config.yaml
docs/: AWS_DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS_LAMBDA_CONFIG.md  OPENTELEMETRY_AWS_DEPLOYMENT.md
iac/: Readme.md
iac/examples/: 01.api.lambda.tf_  ecs-fargate-with-otel.tf  lambda-with-otel.tf
iac/modules/api-gateway/: main.tf  outputs.tf  variables.tf
iac/modules/dynamodb/: main.tf  outputs.tf  variables.tf
iac/modules/lambda/: main.tf  outputs.tf  variables.tf
iac/modules/nat-instance/: README.md  main.tf  outputs.tf  user-data.sh  variables.tf
iac/modules/vpc/: main.tf  outputs.tf
iac/src/: index.html
iac/stacks/01.applications/: 00.common.tf  01.api.tf  02.domain-ssl.tf  03.autoscaling.tf  AUTOSCALING.md  FARGATE_SPOT.md  README.md  providers.tf  terraform.tfvars.example  variables.tf
scripts/: setup-aws-infrastructure.sh  setup-ca.sh  test-enrollment-flow.sh
src/apuntador/: __init__.py  app_setup.py  application.py  config.py  di.py  exception_handlers.py  lambda_main.py  lifespan.py  main.py  models.py  openapi.py  routes.py
src/apuntador/api/: __init__.py
src/apuntador/api/v1/: __init__.py
src/apuntador/api/v1/common/: __init__.py  models.py
src/apuntador/api/v1/config/: __init__.py  api.py
src/apuntador/api/v1/device/: __init__.py  api.py  router.py
src/apuntador/api/v1/device/attestation/: api.py  constants.py  router.py
src/apuntador/api/v1/device/attestation/request/: __init__.py
src/apuntador/api/v1/device/attestation/response/: __init__.py
src/apuntador/api/v1/device/attestation/services/: __init__.py
src/apuntador/api/v1/device/request/: __init__.py
src/apuntador/api/v1/device/response/: __init__.py
src/apuntador/api/v1/device/services/: __init__.py
src/apuntador/api/v1/health/: __init__.py  api.py  models.py  router.py
src/apuntador/api/v1/oauth/: __init__.py  api.py  api.py.backup  router.py
src/apuntador/api/v1/oauth/request/: __init__.py
src/apuntador/api/v1/oauth/response/: __init__.py
src/apuntador/api/v1/oauth/services/: __init__.py
src/apuntador/core/: logging.py  telemetry.py  trace_context.py  uvicorn_filters.py
src/apuntador/domain/: __init__.py
src/apuntador/domain/exceptions/: __init__.py
src/apuntador/domain/repository/: __init__.py
src/apuntador/domain/services/: __init__.py  oauth_base.py
src/apuntador/examples/: settings_usage.py
src/apuntador/infrastructure/: __init__.py  factory.py
src/apuntador/infrastructure/implementations/aws/: __init__.py  certificate_repository.py  secrets_repository.py  storage_repository.py
src/apuntador/infrastructure/implementations/local/: __init__.py  certificate_repository.py  secrets_repository.py  storage_repository.py
src/apuntador/infrastructure/providers/: __init__.py  dropbox.py  googledrive.py
src/apuntador/infrastructure/repositories/: __init__.py  certificate_repository.py  secrets_repository.py  storage_repository.py
src/apuntador/middleware/: __init__.py  mtls_validation.py
src/apuntador/models/: __init__.py  config.py  errors.py  shared.py
src/apuntador/services/: __init__.py  certificate_authority.py  device_attestation.py  dropbox.py  googledrive.py  oauth_base.py
src/apuntador/utils/: __init__.py  pkce.py  security.py
tests/: __init__.py  conftest.py  test_aws_infrastructure.py  test_ca_setup.py  test_certificate_authority.py  test_device_attestation.py  test_infrastructure.py  test_pkce.py
tests/integration/: test_attestation_integration.py  test_config_api.py  test_device_integration.py  test_health_api.py  test_mtls_middleware_integration.py  test_oauth_integration.py
tests/unit/: test_additional_coverage.py  test_app_setup.py  test_attestation_service.py  test_config_methods.py  test_coverage_boost.py  test_device_request_models.py  test_device_service.py  test_di.py  test_dropbox_provider.py  test_error_models.py  test_exception_handlers.py  test_googledrive_provider.py  test_infrastructure_factory.py  test_lambda_main.py  test_lifespan.py  test_local_certificate.py  test_local_secrets.py  test_local_storage.py  test_logging.py  test_main.py  test_middleware_traceid.py  test_mtls_middleware.py  test_oauth_base_service.py  test_oauth_service.py  test_openapi.py  test_providers_unit.py  test_security_utils.py  test_services_additional.py  test_simple_coverage.py  test_targeted_lines.py
