[project]
name = "apuntador-backend"
version = "1.0.10"
description = "OAuth proxy backend for Apuntador"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.10",
    "httpx>=0.27.2",
    "authlib>=1.3.2",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.20",
    "loguru>=0.7.3",
    "mangum>=0.19.0",
    "pynamodb>=6.0.2",
    "svix-ksuid>=0.6.2",
    "uvicorn>=0.34.2",
    "boto3>=1.40.59",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "httpx>=0.28.1",
    "mock>=5.2.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
    "ruff>=0.11.7",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apuntador"]

[tool.ruff]
line-length = 88
src = ["src"]  # First, add the source code folder
target-version = "py312"  # We are using Python 3.12

[tool.ruff.lint]
# Activate additional rules to imitate flake8 and isort
select = [
  "E", "F", "I", "UP", "B", "W", "C90"
]
# Exclude files and folders that are not part of the source code
exclude = ["tests/data", ".venv"]

# Activate autofix for common problems
fixable = ["ALL"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
pretty = true
