[project]
name = "apuntador-backend"
version = "1.0.41"
description = "OAuth proxy backend for Apuntador"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "httpx>=0.28.1",
    "authlib>=1.6.6",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.21",
    "loguru>=0.7.3",
    "mangum>=0.20.0",
    "pynamodb>=6.1.0",
    "svix-ksuid>=0.6.2",
    "uvicorn>=0.40.0",
    "boto3>=1.42.19",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-httpx>=0.60b1",
    "opentelemetry-instrumentation-logging>=0.60b1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "aws-xray-sdk>=2.15.0",
    "opentelemetry-sdk-extension-aws>=2.1.0",
    "opentelemetry-propagator-aws-xray>=1.0.2",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "httpx>=0.28.1",
    "mock>=5.2.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
    "ruff>=0.14.10",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apuntador"]

[tool.ruff]
line-length = 88
src = ["src"]  # First, add the source code folder
target-version = "py314"  # We are using Python 3.14

[tool.ruff.lint]
# Activate additional rules to imitate flake8 and isort
select = [
  "E", "F", "I", "UP", "B", "W", "C90"
]
# Exclude files and folders that are not part of the source code
exclude = ["tests/data", ".venv"]

# Activate autofix for common problems
fixable = ["ALL"]

[tool.mypy]
python_version = "3.14"
# Strict type checking, pero con algunas excepciones razonables
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Permite funciones sin type hints completos
disallow_any_generics = false  # Permite dict, list sin [str, Any]
ignore_missing_imports = true
pretty = true
# Permite algunos patrones comunes de FastAPI y Pydantic
allow_redefinition = true
no_implicit_optional = false  # Permite Optional implícito (param = None)

# Configuraciones específicas por módulo
[[tool.mypy.overrides]]
module = "apuntador.examples.*"
ignore_errors = true  # Los ejemplos no necesitan type checking estricto

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Coverage configuration
[tool.coverage.run]
source = ["src/apuntador"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/conftest.py",
    # Exclude entry points that are hard to test
    "src/apuntador/main.py",
    "src/apuntador/lambda_main.py",
    # Exclude OpenTelemetry (disabled in tests)
    "src/apuntador/core/telemetry.py",
    # Exclude AWS implementations (would require AWS credentials)
    "src/apuntador/infrastructure/implementations/aws/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
